--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ section {
   position: relative;
   width: 100%;
   min-height: 90vh;
-  background-image: url('./Component/images/pexels-asad-photo-maldives-169196\ \(1\).jpg');
+  background: linear-gradient(115deg, #99f0ff, #2c6bf2);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -36,7 +36,7 @@ section::before {
 /* Media query for mobile */
 @media (max-width: 480px) {
   section {
-    height: auto;
+    height: auto
   }
 }
 
