--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,48 @@ hr {
   margin: 8px 0;
 }
 
+/* About  */
+
+.mission:hover {
+  .icon {
+    color: rgb(202, 124, 41);
+  }
+}
+
+/* About End */
+
+
+/* Service Start */
+
+@keyframes zoom-out {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0.8);
+  }
+}
+
+.hover\:animate-zoom-out:hover {
+  animation: zoom-out 0.4s linear;
+}
+
+
+/* service faq  */
+.faq-answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.8s ease;
+
+}
+
+.faq-answer.open {
+  max-height: 500px;
+
+}
+
+/* Service End */
 
 
 /* Footer */
@@ -55,5 +97,9 @@ li {
 }
 
 li:hover {
+  color: rgb(192, 153, 37);
+}
+
+.color:hover {
   color: rgb(192, 153, 37);
 }
