--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi:wght@100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Onest:wght@100..900&family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi:wght@100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Onest:wght@100..900&family=Orbitron:wght@400..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   margin: 0;
@@ -70,8 +70,13 @@ nav h1 {
   }
 
   75% {
-    background-image: url('./Component/images/Home4.jpg');
+    background-image: url('./Component/images/Gallery12.jpg');
   }
+}
+
+.drop-shadow {
+  filter: drop-shadow(5px 10px 10px rgba(207, 207, 207, 0.5));
+  /* Offset X, Offset Y, Blur Radius, Color */
 }
 
 /* Main Front side Bg chnage end */
