--- a/src/App.css
+++ b/src/App.css
@@ -46,12 +46,24 @@ nav h1 {
 /* Navbar end */
 /* Main Front side Bg chnage start */
 .front {
+  position: relative;
   width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   animation: slideshow 40s infinite;
+}
+
+.front::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
 
 @keyframes slideshow {
