--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ nav h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: -1;
 }
 
@@ -97,7 +97,7 @@ nav h1 {
 }
 
 .drop-shadow {
-  filter: drop-shadow(5px 10px 10px rgba(207, 207, 207, 0.5));
+  filter: drop-shadow(5px 1px 100px #fb8500);
 }
 
 /* Main Front side Bg chnage end */
