--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ nav h1 {
 .front {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
