--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi:wght@100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Onest:wght@100..900&family=Orbitron:wght@400..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Anek+Gurmukhi:wght@100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Onest:wght@100..900&family=Orbitron:wght@400..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rozha+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rozha+One&display=swap');
 
 * {
   margin: 0;
@@ -97,7 +98,7 @@ nav h1 {
 }
 
 .drop-shadow {
-  filter: drop-shadow(5px 1px 100px #fb8500);
+  filter: drop-shadow(5px 1px 100px #FFDF7A);
 }
 
 /* Main Front side Bg chnage end */
@@ -132,6 +133,10 @@ hr {
   .icon {
     color: rgb(202, 124, 41);
   }
+}
+
+.no_of_exp_h1 {
+  font-weight: 100;
 }
 
 /* About End */
